@@ -9,7 +9,8 @@
 if "%OS%"=="Windows_NT" setlocal
 
 @rem Uncomment those lines to set JVM options. GRADLE_OPTS and JAVA_OPTS can be used together.
-@rem set GRADLE_OPTS=%GRADLE_OPTS% -Xmx512m
+@rem I'm concatenating user's GRADLE_OPTS at the end so that they win in case the user has already configured memory settings.
+set GRADLE_OPTS=-Xmx1024m -XX:MaxPermSize=256m %GRADLE_OPTS%
 @rem set JAVA_OPTS=%JAVA_OPTS% -Xmx512m
 
 set DIRNAME=%~dp0
